--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
                <p class="text-center lead mb-4">
                   <span id="totalFunctionNum"></span> functions documented
                </p>
-               <!--wait in line-->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name"><b>standInLine</b> -</p>
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -41,7 +40,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!--shopping list-->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>listVar</b> - add a new food to our food list (Food,
@@ -51,7 +50,6 @@
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -61,7 +59,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!--unshift array-->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>unshiftVar</b> - add new a breakfast item to list, "run"
@@ -72,7 +70,6 @@
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -82,7 +79,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!--shift array-->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>shiftVar</b> - add new fruit to list, "run" will return
@@ -92,7 +89,6 @@
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -102,7 +98,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!--pop array-->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>popVar</b> - add new fruit to list, "run" will return
@@ -112,7 +108,6 @@
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -122,7 +117,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- push array-->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>pushVar</b> - type a NBA team to have it pushed into
@@ -131,7 +126,6 @@
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -141,7 +135,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- Find the nth-last-letter in each word  -->
+               <!-- start column  -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>nthToLastLetter</b> - will return the nth-to-last letter
@@ -154,7 +148,6 @@
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -164,7 +157,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- Find the last letter in each word-->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>lastLetter</b> - will return the last character in each
@@ -173,7 +166,6 @@
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -183,7 +175,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- Find the nth letter in each word  -->
+               <!-- start column  -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>nthLetter</b> - will return the nth letter in each word
@@ -195,7 +187,6 @@
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -205,7 +196,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- Find the first letter in each wod column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>firstLetter</b> - will return the first letter in each
@@ -217,7 +208,6 @@
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -227,7 +217,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- Finding length of words column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>findLength</b> - will return the character length of
@@ -237,7 +227,6 @@
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -247,7 +236,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- compound assigment w/ augmented subtraction column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>constructString</b> - will add favorite fruit to string
@@ -256,7 +245,6 @@
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -266,7 +254,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- concatenate with plus equals column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>concatenatePlusEquals</b> - will concatenate the first
@@ -275,7 +263,6 @@
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -285,7 +272,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- concatenate start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>concatenate</b> - will concatenate the two inputs
@@ -295,7 +282,6 @@
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -305,7 +291,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- divide decimal start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>divDecimal</b> - divides three decimal numbers
@@ -324,14 +310,13 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- multiply decimal start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name"><b>multiDecimal</b> - mutiplies decimals</p>
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
-
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
@@ -341,8 +326,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-
-               <!-- decrement start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>decrement</b> - subtracts one to existing number
@@ -359,7 +343,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- increment start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>increment</b> - adds one to existing number
@@ -376,7 +360,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- dividing start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>divide</b> - Divides the 2 values to equal quotient
@@ -394,7 +378,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- multiplication start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>multiply</b> - Multiplies 3 values together
@@ -413,7 +397,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- subtraction start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name"><b>subtract</b> - Subtract the two values</p>
                   <pre style="display: none;"><code></code></pre>
@@ -429,7 +413,7 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
-               <!-- addition start column -->
+               <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name"><b>add</b> - Add two values together</p>
                   <pre style="display: none;"><code></code></pre>
